[tool.poetry]
name = "modelresolvers"
version = "v0.2.1"
description = "modelresolvers is python package"
authors = ["Muzaffer Cıkay"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = "0.205.0"
pytest = "*"
flake8 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
